<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>dev.drf.gear.banana</groupId>
    <artifactId>banana-gear</artifactId>
    <version>1.0-SNAPSHOT</version>

    <packaging>pom</packaging>

    <name>Banana Gear</name>
    <description>Do you like banana?</description>

    <modules>
        <module>banana-gear-core</module>
        <module>banana-gear-example</module>
        <module>banana-gear-shared</module>
    </modules>

    <properties>
        <java.version>14</java.version>
        <java.enable.preview>--enable-preview</java.enable.preview>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- EMPTY -->
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- EMPTY -->
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>${java.version}</release>
                    <compilerArgs>${java.enable.preview}</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>